# racecar

./: .clang-format-ignore  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  LICENSE  Projects2025.md  README.md  formater-test.cpp  index.html
firmware/: .clang-format  .gitignore  .pre-commit-config.yaml  BK_TODO  CMakeLists.txt  Dockerfile  Makefile  README.md  Taskfile.dist.yml  clang_test.h  flasher.sh  format-test.cpp  formater-test.cpp  index.html  integration.clangd  main.cpp  old_CMakeLists copy.txt  openocd-gdb.sh
firmware/HelloWorld/: CMakeLists.txt  app.h  main.cc
firmware/TMS/: CMakeLists.txt  app.h  main.cc  project.h
firmware/architecture/: index.html
firmware/can-traffic/: index.html
firmware/can-traffic/img/: can-frame.drawio
firmware/cmake/: build_cubemx.cmake  cangen.cmake  custom_cubemx_targets.mk  custom_toolchain.sh  functions.cmake  generate_cubemx.mk  generate_cubemx_script.txt.template
firmware/compile-project/: index.html
firmware/dbcs/: DEMO_CAN.dbc  VEH_TEST_CAN.dbc  io.dbc  pedal.dbc  pt.dbc  veh.dbc  veh_test.dbc
firmware/dbcs/legacy/: CAN_AMKInverter.dbc  CAN_Cooling.dbc  CAN_Driver.dbc  CAN_FRT_controller.dbc  CAN_TMS.dbc
firmware/dev-setup/: index.html
firmware/dev-setup/vscode/: index.html
firmware/flashing/: index.html
firmware/hw-debug/: index.html
firmware/infra/: CANCommunication.cpp  mcal_type.h
firmware/infra/adc/: adc_input.h
firmware/infra/gpio/: digital_input.h  digital_output.h
firmware/infra/input/: adc_input.h  digital_input_pin.h  input_base.h
firmware/infra/mcal_input/: adc_input.h  adc_input.hpp  digital_input_base.h  digital_input_base.hpp  digital_input_pin.h  digital_input_port.h  digital_input_port.hpp  input_base.h  input_base.hpp
firmware/infra/mcal_port/: port_pin.h  port_pin.hpp
firmware/infra/output/: digital_output_pin.h
firmware/infra/pwm/: pwm_output.h
firmware/infra/util/: CANCommunication.cpp  communication.h  communication.hpp  disjunction.h  noncopyable.h  noncopyable.hpp  peripheral.h  util_communication_can.hpp
firmware/mcal/arduino/: CMakeLists.txt
firmware/mcal/cli/: CMakeLists.txt  README.md  analog_output.hpp  can.hpp  pwm.hpp
firmware/mcal/linux/: CMakeLists.txt  README.md  Toolchain.cmake  digital_input.hpp  pwm_output.cc
firmware/mcal/raspi/: CMakeLists.txt  PostBuild.cmake  Toolchain.cmake  can_base.cpp
firmware/mcal/stm32f/: CMakeLists.txt  can.cc  can.hpp  pwm.hpp
firmware/mcal/stm32f4/: CMakeLists.txt
firmware/mcal/stm32f767/: CMakeLists.txt  PostBuild.cmake  Toolchain.cmake  retarget.cc
firmware/mcal/windows/: CMakeLists.txt
firmware/project-structure/: index.html
firmware/projects/: pt.dbc  pt.json  pt.yaml  veh.dbc  veh.dbf  veh.json  veh.yaml
firmware/projects/AmkBlock/: CMakeLists.txt  config.yaml  main.cc
firmware/projects/Dashboard/: CMakeLists.txt  Makefile  README.md  bindings.hpp  config.yaml  dashboard-main.cpp  main.cc  readme.md
firmware/projects/Demo/: demo.dbc
firmware/projects/DemoCan/: CMakeLists.txt  README.md  main.cc
firmware/projects/DemoCanBar/: CMakeLists.txt  README.md  config.yaml  main.cc
firmware/projects/DemoCanFoo/: CMakeLists.txt  README.md  config.yaml  main.cc
firmware/projects/DemoMapper/: README.md  main.cc
firmware/projects/DemoProject/: CMakeLists.txt  README.md  main.cc
firmware/projects/DemoProjectRTOS/: CMakeLists.txt  README.md  main.cc
firmware/projects/DriverInterface/: CMakeLists.txt  README.md  driver_interface.cc  driver_interface.hpp  driver_interface_fsm.cc  driver_interface_fsm_test.hpp  driver_interface_test.cc
firmware/projects/EvActive/: CMakeLists.txt  config.yaml  main.cc
firmware/projects/FrontController/: CMakeLists.txt  README.md  bindings.hpp  config.yaml  enums.hpp  main.cc  physical.hpp  thresholds.hpp  tuning.hpp
firmware/projects/FrontControllerSimple/: CMakeLists.txt  main.cc
firmware/projects/Governor/: CMakeLists.txt  enums.hpp  governor.cc  governor.hpp  governor_test.cc
firmware/projects/HelloWorld/: main.cc
firmware/projects/IoCheckoutFc/: CMakeLists.txt  README.md  config.yaml  main.cc
firmware/projects/LVController/: CMakeLists.txt  README.md  bindings.hpp  config.yaml  main.cc
firmware/projects/LVIocheckout/: CMakeLists.txt  main.cc
firmware/projects/MyBlink/: README.md  bindings.h  main.cc
firmware/projects/TMS/: CMakeLists.txt  bindings.h  bindings.hpp  config.yaml  main.cc
firmware/projects/TMS_old/: CMakeLists.txt
firmware/projects/VD_Interface/: CMakeLists.txt  config.yaml  main.cc
firmware/projects/lv_port_stm32f469_disco/: CMakeLists.txt  LVGL_STM32f469I_Disco.ioc  README.md  bindings.hpp  main.c  main.cc
firmware/projects/openOCD/: Makefile  STM32F750N8HX_FLASH.ld  STM32F750N8HX_RAM.ld  openocd.cfg  stm32f7x.cfg
firmware/shared/: CMakeLists.txt  mcal_type.h
firmware/shared/comms/: CANCommunication.cpp  CMakeLists.txt  communication.hpp
firmware/shared/controls/: DI_driverTorqueRequest.h  DI_driverTorqueRequest_test.cc  DI_driverTorqueRequest_test.cpp  Makefile  README.md  add.h  add_test.cc  brake_pedal_lights.h  brake_pedal_lights_test.cc  driver_interface_error_handling.h  driver_interface_error_handling_test.cc  driver_interface_error_handling_test.cpp  driver_interface_fsm.hpp  driver_interface_fsm_test.cc  driver_interface_torque_req.h  driver_interface_torque_req_test.cc  motor_torque.h  motor_torque_test.cc  steering_angle.h  steering_angle_test.cc  tc_scale_factor.h  tc_scale_factor_test.cc  testing.h  tvFactor.h  tvFactor_test.cc
firmware/shared/device/: dac.hpp  digital_pot.hpp  i2c_mux.hpp
firmware/shared/input/: adc_input.h  input_base.h  (+1 more)
firmware/tests/: CMakeLists.txt  Makefile  README.md  tests.cc
firmware/using-vscode-pio/: index.html
mcal/linux/: CMakeLists.txt  PostBuild.cmake  analog_input.cc  analog_input.hpp  can.cc  can.hpp  digital_input.cc  digital_output.cc  digital_output.hpp  pwm_output.hpp
scripts/cangen/: README.md  canParser.ipynb  canSupportLib.py  can_gen.py  can_generator.py  library.json  main.py  pio_integration.py  pyproject.toml  requirements.txt
(+1355 files in other folders)
