[tool.poetry]
name = "cangen"
version = "0.4.0"
description = "Converts .dbc files into C++ files for a CAN bus system."
authors = ["Andrew Iammancini", "Samuel Parent", "Blake Freer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cantools = "39.4.5"
Jinja2 = "3.1.5"
numpy = "1.26.4"
PyYAML = "6.0.1"

[tool.poetry.scripts]
cangen = "cangen.__main__:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
